# keke

./: .gitignore  .vars.ini  LICENSE  MANIFEST.in  Makefile  README.md  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: build.yml
keke/: __init__.py  failure.py  pyrightconfig.json  stats.py
keke/tests/: __init__.py  __main__.py  core.py  failure.py  stats.py
