[metadata]
name = keke
description = Easy profiling in chrome trace format
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/keke-tracing/keke
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm < 8; python_version<'3.8'
    setuptools_scm >= 8; python_version>='3.8'
    setuptools >= 65
include_package_data = true
install_requires =
    psutil; sys.platform == "win32"

[options.extras_require]
dev =
    black == 24.2.0
    checkdeps == 0.9.0
    flake8 == 7.0.0
    mypy == 1.8.0
    tox == 4.12.1
    twine == 4.0.2
    ufmt == 2.5.1
    usort == 1.0.7
    wheel == 0.42.0
test =
    coverage >= 6

[options.entry_points]
# console_scripts =
#     foo=foo:bar

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = keke/*
omit = keke/tests/*,keke/_version.py

[coverage:report]
fail_under = 80
precision = 1
show_missing = True
skip_covered = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py{37,38,39,310,311,312}, coverage

[testenv]
deps = .[test]
allowlist_externals = make
commands =
    make test
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage.{envname}

[testenv:coverage]
deps = coverage
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage
commands =
    coverage combine
    coverage report
depends =
    py{37,38,39,310,311,312}

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
