[metadata]
name = keke
description = Easy profiling in chrome trace format
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/thatch/keke
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools_scm >= 8
    setuptools >= 65
include_package_data = true
install_requires =

[options.extras_require]
dev =
    ruff == 0.8.0
    checkdeps == 0.9.0
    mypy == 1.13.0
    tox == 4.23.2
test =
    coverage >= 6

[options.entry_points]
# console_scripts =
#     foo=foo:bar

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = keke/*
omit = keke/tests/*

[coverage:report]
fail_under = 70
precision = 1
show_missing = True
skip_covered = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py{38,39,310,311,312,313}, coverage

[testenv]
deps = .[test]
allowlist_externals = make
commands =
    make test
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage.{envname}

[testenv:coverage]
deps = coverage
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage
commands =
    coverage combine
    coverage report
depends =
    py{38,39,310,311,312,313}

